--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "backend",
+  "name": "portaljob",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon backend/index.js",
+    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "start":"nodemon backend/index.js"
   },
   "author": "",
   "license": "ISC",
