alteração de localhost por https://portaljob.onrender.com/

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://supportwarelucas:KDnG6DzzAYQz4oMY@portaljob.yt8yj.mongodb.net/
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://portaljob.onrender.com
 PORT=8000
 SECRET_KEY=sdlhfvbljhdsvblsdkfjvbfsdf
 CLOUD_NAME=dkigyluv4
